<resources>
    <string name="app_name">Picsum</string>

<!--    Main Activity -->
    <string name="setting_text">Setting</string>
    <!--  MainActivity  Bottom Toolbar-->
    <string name="search_optionMenu">Search</string>
    <string name="refresh_optionMenu">Refresh</string>
    <string name="setting_optionMenu">Setting</string>

<!--    Setting bottom Sheet-->
    <string name="dataBase_text">DataBase</string>
    <string name="remote_mediator_text">Remote Mediator</string>
    <string name="paging_source_text">Paging Source</string>
    <string name="no_dataBase_text">No DataBase</string>

    <string name="jsonConverter_text">Json Converter</string>
    <string name="jacksonJson_text">Jackson Json </string>
    <string name="gsonJson_text">Gson Json</string>
    <string name="moshiJson_text">Moshi Json</string>
    
    <string name="imageLoader_text">Image Loader</string>
    <string name="glide_text">Glide Loader</string>
    <string name="picasso_text">Picasso Loader</string>
    <string name="fresco_text">Fresco Loader</string>
    <string name="coil_text">Coil Loader</string>


    <!--    Navigation Drawer Bottom Sheet-->
    <string name="developer_name">Created by Sudo Ajay</string>
    <string name="send_feedback_text">Send Feedback</string>
    <string name="rate_use_text">Rate-Us</string>
    <string name="more_app_text">More App</string>
    <string name="share_app_text">Share Apk</string>
    <string name="app_version_text">App Version : </string>
    <string name="workOnProgress_text">Work On Progress</string>

<!--    Long Press Bottom Sheet-->
    <string name="more_option_text">More Option</string>
    <string name="view_image_text">View Image</string>
    <string name="download_image_text">Download Image</string>
    <string name="downloaded_text">Downloaded</string>

<!--    Error-->
    <string name="somethingWentWrong_text">Something Went Wrong</string>
    <string name="noInternetConnection_text">No Internet Connection</string>


    <!--    Send Feedback-->
    <string name="add_Screenshot_Small_text">Add Screenshot Small</string>
    <string name="add_Screenshot_Large_text">Add Screenshot Large</string>
    <string name="close_Image_text">Close Image</string>
    <string name="feedbackEditTextHint">Please write your feedback</string>
    <string name="feedbackEditTextError">Please write something in feedback</string>
    <string name="systemInfo_text">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text">+ Add Screenshot</string>
    <string name="ok_text">OK</string>




    <!--    System Info-->
    <string name="system_info_text"> System Info </string>
    <string name="device_text">Device : </string>
    <string name="os_api_level_text">Os Api Level : </string>
    <string name="language_text">Language : </string>
    <string name="total_memory_text">Total Heap Memory : </string>
    <string name="free_memory_text">Free Heap Memory : </string>
    <string name="screen_Text">Screen Size : </string>
    <string name="network_type_text">Network Type : </string>


    <!--    Network Provider-->
    <string name="wifi_text">Wifi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="vpn_text">Vpn</string>
    <string name="no_internet_text">No Internet</string>


</resources>