<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.sudoajay.picsum.main.MainViewModel" />
        <variable
            name="bottomSheet"
            type="com.sudoajay.picsum.main.bottomsheet.SettingBottomSheet" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        android:paddingBottom="@dimen/bottom_sheet_padding_bottom">

        <View
            android:id="@+id/view"
            android:layout_width="35dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_top_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dataBase_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato"
            android:text="@string/dataBase_text"
            android:textColor="@color/headingNormalTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/remoteMediator_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> bottomSheet.setDataBaseValue(@string/remote_mediator_text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataBase_TextView">

            <TextView
                android:id="@+id/remoteMediator_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:text="@string/remote_mediator_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/remoteMediator_ImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/remoteMediator_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="@{(viewModel.getDatabase.equals(@string/remote_mediator_text))   ?  View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/remoteMediator_TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/remoteMediator_TextView"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/fadeTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pagingSource_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> bottomSheet.setDataBaseValue(@string/paging_source_text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remoteMediator_ConstraintLayout">

            <TextView
                android:id="@+id/pagingSource_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:text="@string/paging_source_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pagingSource_ImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pagingSource_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="@{(viewModel.getDatabase.equals(@string/paging_source_text))   ?  View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/pagingSource_TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pagingSource_TextView"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/fadeTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noDataBase_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> bottomSheet.setDataBaseValue(@string/no_dataBase_text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pagingSource_ConstraintLayout">

            <TextView
                android:id="@+id/noDataBase_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/no_dataBase_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/noDataBase_ImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/noDataBase_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="@{(viewModel.getDatabase.equals(@string/no_dataBase_text))   ?  View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/noDataBase_TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/noDataBase_TextView"
                app:layout_constraintVertical_bias="0.261"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/fadeTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/converter_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato"
            android:text="@string/converter_text"
            android:textColor="@color/headingNormalTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noDataBase_ConstraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/jacksonJson_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> bottomSheet.setJsonValue(@string/jacksonJson_text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_TextView">

            <TextView
                android:id="@+id/jacksonJson_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/jacksonJson_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/jacksonJson_ImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/jacksonJson_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="@{(viewModel.getJsonConverter.equals(@string/jacksonJson_text))   ?  View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/jacksonJson_TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/jacksonJson_TextView"
                app:layout_constraintVertical_bias="0.261"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/fadeTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gsonJson_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> bottomSheet.setJsonValue(@string/gsonJson_text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jacksonJson_ConstraintLayout">

            <TextView
                android:id="@+id/gsonJson_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/gsonJson_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gsonJson_ImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="20dp" />

            <ImageView
                android:id="@+id/gsonJson_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:visibility="@{(viewModel.getJsonConverter.equals(@string/gsonJson_text))   ?  View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/gsonJson_TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gsonJson_TextView"
                app:layout_constraintVertical_bias="0.261"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/fadeTextColor"
                tools:ignore="ContentDescription"
                android:layout_marginRight="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moshiJson_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> bottomSheet.setJsonValue(@string/moshiJson_text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gsonJson_ConstraintLayout">

            <TextView
                android:id="@+id/moshiJson_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/moshiJson_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/moshiJson_ImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/moshiJson_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="@{(viewModel.getJsonConverter.equals(@string/moshiJson_text))   ?  View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/moshiJson_TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/moshiJson_TextView"
                app:layout_constraintVertical_bias="0.261"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/fadeTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>